interaudio: Set all required fields on the template caps

https://bugzilla.gnome.org/show_bug.cgi?id=739542